# sod_cuda_kernels

./: CMakeLists.txt
cmake/: compilerOps.cmake
src/libs/: CMakeLists.txt
src/libs/cudaKernels/: CMakeLists.txt
src/libs/cudaKernels/includes/: kernels.cuh
src/libs/cudaKernels/sources/: kernels.cu
