project(cudaKernels)

file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/sources/*.cu)
set(HEADER_DIR ${CMAKE_CURRENT_LIST_DIR}/includes)
file(GLOB HEADER_FILES ${HEADER_DIR}/*.cuh)

include_directories(${HEADER_DIR})

add_library(${PROJECT_NAME} ${LIBRARY_TYPE} ${SRC_FILES} ${HEADER_FILES})

set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

set(${PROJECT_NAME}_INCLUDE_DIRS ${HEADER_DIR} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${HEADER_FILES} DESTINATION include)